--- a/about.html
+++ b/about.html
@@ -28,8 +28,16 @@
 
     <main class="home-content">
       <section class="intro">
-        <h1>Welcome to My Portfolio</h1>
-        <p>I build websites that are simple, modern, and effective.</p>
+        <h1>About Me</h1>
+        <p>
+          Hello! I'm MikeN, a web developer passionate about clean code and
+          simple, effective designs. This site showcases my work and the tools I
+          enjoy using.
+        </p>
+        <p>
+          I specialize in frontend development using HTML, CSS, and JavaScript.
+          I'm currently learning backend technologies too!
+        </p>
       </section>
     </main>
 
