--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,21 @@
 
     <main class="home-content">
       <section class="intro">
-        <h1>Welcome to My Portfolio</h1>
-        <p>I build websites that are simple, modern, and effective.</p>
+        <h1>Contact Me</h1>
+        <p>Want to get in touch? I'd love to hear from you.</p>
+        <form class="contact-form">
+          <label for="name">Name</label><br />
+          <input type="text" id="name" name="name" required /><br />
+
+          <label for="email">Email</label><br />
+          <input type="email" id="email" name="email" required /><br />
+
+          <label for="message">Message</label><br />
+          <textarea id="message" name="message" rows="5" required></textarea
+          ><br />
+
+          <button type="submit">Send</button>
+        </form>
       </section>
     </main>
 
