--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,17 @@
 
     <main class="home-content">
       <section class="intro">
-        <h1>Welcome to My Portfolio</h1>
-        <p>I build websites that are simple, modern, and effective.</p>
+        <h1>My Projects</h1>
+        <div class="projects-grid">
+          <div class="project-card">
+            <h3>Project #1</h3>
+            <p>Description for Project #1</p>
+          </div>
+          <div class="project-card">
+            <h3>Project #2</h3>
+            <p>Description for Project #2</p>
+          </div>
+        </div>
       </section>
     </main>
 
