Add minesweeper project

--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,15 @@
         <h1>My Projects</h1>
         <div class="projects-grid">
           <div class="project-card">
-            <h3>Project #1</h3>
-            <p>Description for Project #1</p>
+            <h3>Project #1: Swine Reaper 🐖💣</h3>
+            <p>
+              A fun twist on the classic Minesweeper game. Choose your
+              difficulty and uncover the board while avoiding The Reaper. Built
+              with HTML, CSS, and JavaScript.
+            </p>
+            <a href="./swine-reaper.html" class="project-link"
+              >Play Swine Reaper</a
+            >
           </div>
           <div class="project-card">
             <h3>Project #2</h3>
