Update page summaries, minor game improvements for SR

--- a/about.html
+++ b/about.html
@@ -30,13 +30,22 @@
       <section class="intro">
         <h1>About Me</h1>
         <p>
-          Hello! I'm MikeN, a web developer passionate about clean code and
-          simple, effective designs. This site showcases my work and the tools I
-          enjoy using.
+          I'm MikeN, a recent Computer Science graduate with hands-on experience
+          in Python, Java, and JavaScript. My work spans a range of
+          disciplines—from developing machine learning applications in Python
+          using Jupyter Notebooks to building backend services with Java and
+          Spring Boot.
         </p>
         <p>
-          I specialize in frontend development using HTML, CSS, and JavaScript.
-          I'm currently learning backend technologies too!
+          Most recently, I’ve expanded into full-stack web development, creating
+          responsive and accessible websites using HTML, CSS, and JavaScript.
+          I’m passionate about building intuitive, user-friendly solutions that
+          bridge the gap between technical power and everyday usability.
+        </p>
+        <p>
+          Whether it's optimizing backend logic, designing clean interfaces, or
+          exploring the power of data-driven applications, I enjoy crafting
+          digital experiences that are both functional and engaging.
         </p>
       </section>
     </main>
