--- a/projects.html
+++ b/projects.html
@@ -33,11 +33,13 @@
           <div class="project-card">
             <h3>Project #1: Swine Reaper 🐖💣</h3>
             <p>
-              A fun twist on the classic Minesweeper game. Choose your
-              difficulty and uncover the board while avoiding The Reaper. Built
-              with HTML, CSS, and JavaScript.
+              Swine Reaper is a playful spin on the classic Minesweeper
+              game—with pigs! Choose your difficulty, clear the board, and avoid
+              The Reaper. Built using HTML, CSS, and JavaScript, it’s simple,
+              fast, and fun.
             </p>
-            <a href="./swine-reaper.html" class="project-link"
+
+            <a href="./swine-reaper.html" class="project-link btn-link"
               >Play Swine Reaper</a
             >
           </div>
