--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <main class="home-content">
       <section class="intro">
         <h1>Welcome to My Portfolio</h1>
-        <p>I build websites that are simple, modern, and effective.</p>
+        <p>
+          I'm MikeN—a recent Computer Science graduate with a passion for
+          building modern, user-friendly digital experiences. From data-driven
+          apps to responsive web design, this site showcases the projects and
+          technologies I've been exploring.
+        </p>
       </section>
     </main>
 
