Style updates, darker dark mode, and wider about page with font improvements

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MikeN Designs</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="./js/main.js" defer></script>
   </head>
   <body>
@@ -38,11 +47,17 @@
               The Reaper. Built using HTML, CSS, and JavaScript, it’s simple,
               fast, and fun.
             </p>
-
+            <div class="project-tags">
+              <span class="tag">HTML</span>
+              <span class="tag">CSS</span>
+              <span class="tag">JavaScript</span>
+              <span class="tag">Game</span>
+            </div>
             <a href="./swine-reaper.html" class="project-link btn-link"
               >Play Swine Reaper</a
             >
           </div>
+
           <div class="project-card">
             <h3>Project #2</h3>
             <p>Description for Project #2</p>
