--- a/swine-reaper.html
+++ b/swine-reaper.html
@@ -6,6 +6,15 @@
     <title>Swine Reaper</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/swine-reaper.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="./js/main.js" defer></script>
     <script src="./js/swine-reaper.js" defer></script>
   </head>
