Change designs to studio

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MikeN Designs</title>
+    <title>MikeN Studio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="logo">MikeN Designs</div>
+      <div class="logo">MikeN Studio</div>
       <nav class="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -67,7 +67,7 @@
     </main>
 
     <footer class="site-footer">
-      <p>&copy; 2025 MikeN Designs. All rights reserved.</p>
+      <p>&copy; 2025 MikeN Studio. All rights reserved.</p>
     </footer>
   </body>
 </html>
