--- a/swine-reaper.html
+++ b/swine-reaper.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="logo">MikeN Designs</div>
+      <div class="logo">MikeN Studio</div>
       <nav class="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -60,7 +60,7 @@
     </main>
 
     <footer class="site-footer">
-      <p>&copy; 2025 MikeN Designs. All rights reserved.</p>
+      <p>&copy; 2025 MikeN Studio. All rights reserved.</p>
     </footer>
   </body>
 </html>
